linux: Patch out perl dependency

--- a/extra/linux/build
+++ b/extra/linux/build
@@ -1,8 +1,10 @@
 #!/bin/sh -e
 
+patch -p1 < no-perl.patch
+mkdir -p "$1/boot"
+
 cp config .config
 make olddefconfig
-mkdir -p "$1/boot"
 
 make
 
