--- a/extra/linux/build
+++ b/extra/linux/build
@@ -21,5 +21,5 @@ make \
 mv "$1/boot/vmlinuz"    "$1/boot/vmlinuz-$2"
 mv "$1/boot/System.map" "$1/boot/System.map-$2"
 
-# cp the efi executable to the EFI partition
-cp "$1/boot/vmlinuz-$2" "$1/efi/EFI/kiss/"
+# cp the efi executable to the EFI partition w/o the version
+cp "$1/boot/vmlinuz-$2" "$1/efi/EFI/kiss/vmlinuz"
